--- a/my-portfolio/app/globals.css
+++ b/my-portfolio/app/globals.css
@@ -1,29 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+/* font-family: Arial, Helvetica, sans-serif; */
 
 /* // typereffet for name */
 
@@ -47,4 +26,12 @@ body {
 @keyframes blink-caret {
   from, to { border-color: transparent }
   50% { border-color: white; }
+}
+
+/* glow line */
+.line {
+  box-shadow: 0 0 8px rgba(108, 64, 152, 0.6), 0 0 20px rgba(113, 39, 186, 0.9);
+}
+.glow {
+  box-shadow: 0 0 8px rgba(108, 64, 152, 0.6), 0 0 15px rgba(113, 39, 186, 0.9);
 }
