--- a/my-portfolio/app/globals.css
+++ b/my-portfolio/app/globals.css
@@ -1,37 +1,114 @@
 @import "tailwindcss";
 
-  
+body {
+  overflow-x: hidden;
+}
 
 /* font-family: Arial, Helvetica, sans-serif; */
 
 /* // typereffet for name */
 
 .typewriter {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .05em solid white; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 3px auto; /* Gives that scrolling effect as the typing happens */
-  animation: 
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: .05em solid white;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 3px auto;
+  /* Gives that scrolling effect as the typing happens */
+  animation:
     typing 3.5s steps(20, end),
     blink-caret .7s step-end infinite;
 }
 
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0
+  }
+
+  to {
+    width: 100%
+  }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: white; }
+
+  from,
+  to {
+    border-color: transparent
+  }
+
+  50% {
+    border-color: white;
+  }
 }
 
 /* glow line */
 .line {
   box-shadow: 0 0 8px rgba(108, 64, 152, 0.6), 0 0 20px rgba(113, 39, 186, 0.9);
 }
+
 .glow {
   box-shadow: 0 0 8px rgba(108, 64, 152, 0.6), 0 0 15px rgba(113, 39, 186, 0.9);
+}
+
+.textglow:hover {
+  box-shadow: 0 0 8px rgba(108, 64, 152, 0.6), 0 0 15px rgba(113, 39, 186, 0.9);
+}
+
+
+/* @keyframes appear {
+  from{
+    opacity: 1 ;
+    scale: 0.5;
+  } 
+  to{
+    opacity: 10;
+    scale: 1;
+  }
+}
+
+.card{
+  animation: appear linear;
+  animation-timeline: view();
+} */
+
+.slider {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slideTrack {
+  display: flex;
+  width: calc(200px * 30);
+  animation: scroll 60s linear infinite;
+}
+
+.slider:hover .slideTrack {
+  animation-play-state: paused;
+}
+
+.slide {
+  width: 200px;
+  height: 300px;
+  flex-shrink: 0;
+}
+
+.slide img {
+  object-fit: contain;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-3000px);
+  }
 }
