--- a/my-portfolio/app/globals.css
+++ b/my-portfolio/app/globals.css
@@ -114,17 +114,17 @@ body {
 }
 
 .sr {
-  box-shadow: 0 10px 5px #320f85;
+  box-shadow: 0 10px 10px 5px #320f85;
 }
 
 .sr:hover {
-  box-shadow: 15px 10px 5px #2a0b72;
+  box-shadow: 0 13px 10px 5px #2a0b72;
 }
 
 .sl {
-  box-shadow: 0 10px 5px #320f85;
+  box-shadow: 0 10px 10px 5px #320f85;
 }
 
 .sl:hover {
-  box-shadow: -15px 10px 5px #2a0b72;
+  box-shadow: 0 0 -13px 10px 5px #2a0b72;
 }
