--- a/my-portfolio/app/globals.css
+++ b/my-portfolio/app/globals.css
@@ -5,9 +5,12 @@
 }
 
 
-body {
+
+body{
   overflow-x: hidden;
 }
+
+
 
 /* font-family: Arial, Helvetica, sans-serif; */
 
@@ -81,6 +84,7 @@ body {
   animation-timeline: view();
 } */
 
+
 .slider {
   width: 100%;
   height: 100px;
@@ -94,29 +98,33 @@ body {
   animation: scroll 60s linear infinite;
 }
 
-.slider:hover .slideTrack {
+/* .slider:hover .slideTrack {
   animation-play-state: paused;
-}
+} */
 
 .slide {
   width: 200px;
-  height: 300px;
+  height: 100px;
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .slide img {
+  width: 50px;
+  height: auto;
   object-fit: contain;
 }
-
 @keyframes scroll {
   0% {
     transform: translateX(0);
   }
-
   100% {
-    transform: translateX(-3000px);
+    transform: translateX(-50%);
   }
 }
+
 
 .sr {
   box-shadow: 0 10px 10px 5px #320f85;
@@ -134,11 +142,21 @@ body {
   box-shadow: 0 0 -13px 10px 5px #2a0b72;
 }
 
-.tech{
+.tech {}
+
+.tech:hover {
+  background-color: #3f3f43;
+  border-radius: 100%;
+  filter: invert(0);
 }
 
-.tech:hover{
-    background-color: #3f3f43;
-    border-radius: 100%;
-    filter: invert(0);
+
+
+
+.navbar{
+  max-width: 70vw ;
 }
+@media screen and (min-width: 1253px) {
+
+}
+
